--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
             </div>
         </div>
     </div>
+    
+    <!-- Checkout Modal -->
+    <div id="checkoutModal" class="fixed inset-0 z-50 hidden bg-black bg-opacity-50 backdrop-blur-sm flex items-center justify-center">
+        <div class="bg-white rounded-2xl p-6 max-w-sm w-full text-center shadow-xl animate-fadeIn">
+            <h2 class="text-2xl font-bold text-green-600">✅ Order Confirmed!</h2>
+            <p class="mt-2 text-gray-600">Thank you for your purchase. Your awesome wallpapers are on the way!</p>
+            <button id="closeModal" class="mt-6 bg-[#4A4563] hover:bg-[#3a344e] text-white px-4 py-2 rounded transition-all">Close</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
