--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -46,15 +47,17 @@
             </div>
         </div>
     </div>
-    
-    <!-- Checkout Modal -->
-    <div id="checkoutModal" class="fixed inset-0 z-50 hidden bg-black bg-opacity-50 backdrop-blur-sm flex items-center justify-center">
-        <div class="bg-white rounded-2xl p-6 max-w-sm w-full text-center shadow-xl animate-fadeIn">
-            <h2 class="text-2xl font-bold text-green-600">✅ Order Confirmed!</h2>
-            <p class="mt-2 text-gray-600">Thank you for your purchase. Your awesome wallpapers are on the way!</p>
-            <button id="closeModal" class="mt-6 bg-[#4A4563] hover:bg-[#3a344e] text-white px-4 py-2 rounded transition-all">Close</button>
-        </div>
+
+    <!-- Modal Overlay -->
+<div id="successModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+    <div class="bg-white rounded-2xl p-6 w-80 text-center animate-fadeInScale shadow-2xl">
+      <img src="image/goku.jpg" alt="Thank You" class="w-full h-40 object-cover rounded-xl mb-4">
+      <h2 class="text-xl font-bold text-zinc-700 animate-bounceOnce">Thank you for your purchase!</h2>
+      <p class="text-zinc-500 mt-2 text-sm">Enjoy your anime vibe! 😎</p>
+      <button id="closeModal" class="mt-4 bg-[#4A4563] text-white px-4 py-2 rounded hover:bg-[#3a344e] transition-all">Close</button>
     </div>
+  </div>
+  
 
     <script src="script.js"></script>
 </body>
