--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <!-- toast -->
+    <div id="toast" class="fixed bottom-6 right-6 z-50 px-4 py-2 bg-black text-white rounded-lg opacity-0 pointer-events-none transition-all duration-300"></div>
+
+    
     <div class="w-full min-h-screen bg-zinc-100 font-['gilroy']">
         <!-- Navigation bar -->
         <div class="nav flex justify-between items-center px-5 py-5 relative">
